[package]
authors = ["Ahungrynoob <dxd_sjtu@outlook.com>"]
edition = "2018"
name = "napi-jsonschema"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
jsonschema = {version = "0.12.2", default-features = false }
napi = {version = "1", features = ["serde-json"] }
napi-derive = "1"
serde_json = "1"

[target.'cfg(all(any(windows, unix), target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
mimalloc = {version = "0.1"}

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true
